activities and variables renamed

--- a/app/src/main/res/layout/activity_section_b1.xml
+++ b/app/src/main/res/layout/activity_section_b1.xml
@@ -63,7 +63,7 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB1Activity">
             android:textColor="@color/background_dark"/>
 
     <!--kb102-->
-        <TextView
+        <!--<TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -82,7 +82,7 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB1Activity">
             android:hint="@string/timesd"
             android:inputType="number"
             android:maxLength="2" />
-
+-->
         <LinearLayout
             android:id="@+id/fldGrpkb101"
             android:layout_width="match_parent"
